# usp-testing

./: .gitignore  Cargo.toml  build.rs  note.txt
frontend/: Cargo.toml
frontend/assets/: main.css
frontend/src/: main.rs
protobuf_file/: usp-msg-1-1.proto  usp-msg-1-3.proto  usp-msg-1-4.proto  usp-record-1-1.proto  usp-record-1-3.proto  usp-record-1-4.proto
src/: configuration.rs  error.rs  lib.rs  main.rs  mqtt_client.rs  usp_agent.rs  usp_get.rs  usp_mtp.rs  usp_set.rs
src/usp_agent/: mod.rs  usp_get.rs  usp_msg_handle.rs  usp_mtp.rs  usp_set.rs  uspa.rs
usp-controller/: Cargo.toml  build.rs  configuration.yaml
usp-controller/protobuf_file/: usp-msg-1-2.proto  usp-record-1-2.proto
usp-controller/scripts/: init_db.sh
usp-controller/src/: configuration.rs  lib.rs  main.rs  mqtt_client.rs  protobuf.rs  telemetry.rs  usp_agent.rs  usp_get.rs  usp_msg_handle.rs  usp_mtp.rs
